# django-ajax-utils

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  setup.py
django_ajax_utils/: __init__.py  apps.py  forms.py  middleware.py  models.py  multiforms.py  pjax.py  reactor_compiler.py  response.py  settings.py  utility.py  views.py
django_ajax_utils/static/django_ajax_utils/js/: ajaxform.js  el.js  messages.js  pjax.js  polyfill.js  reactor.js  urls.js  utils.js  utils_ajax.js
django_ajax_utils/templates/form_utils/layout/: default.html  foundation.html
django_ajax_utils/templates/form_utils/row/: default.html  foundation.html
django_ajax_utils/templatetags/: form_utils.py  js_urlpatterns.py  pjax_tags.py
sample_project/static/css/: style.css
sample_project/static/js/: ajaxform_init.js  pjax_init.js  run_utils.js
sample_project/templates/: ajaxform.html  base.html  base_pjax.html  home.html  messages.html  pjax.html  pjax_form_get.html  pjax_form_post.html  pjax_forms.html  pjax_messages.html  pjax_page.html  urlpatterns.html  utils.html
sample_project/templates/form_utils/: base.html  formset.html  foundation.html  multiforms.html
sample_project/templates/includes/: form_loop.html
sample_project/templates/partials/: menu.html  messages.html  messages_pjax.html  pjax_menu.html
sample_project/web/: forms.py  settings.py  urls.py  views.py
