[project]
name = "mireq_django_ajax_utils"
description = "Django ajax utils"
readme = "README.rst"
requires-python = ">=3.6"
keywords = ["django", "ajax"]
license = {text = "MIT"}
dynamic = ["version"]
authors = [
	{ name = "Miroslav Bendík", email = "miroslav.bendik@gmail.com" }
]
classifiers = [
	"Environment :: Web Environment",
	"Framework :: Django",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
	"django",
	'contextvars;python_version<"3.7"',
	'dataclasses;python_version<"3.7"',
]

[project.urls]
homepage = "https://github.com/mireq/django-ajax-utils"
documentation = "https://github.com/mireq/django-ajax-utils"
repository = "https://github.com/mireq/django-ajax-utils"
changelog = "https://github.com/mireq/django-ajax-utils/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
	"tox",
	"pylint",
	"pre-commit",
	"bump2version",
	"commitizen",
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_ajax_utils*"]

[tool.setuptools_scm]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.2"
tag_format = "$version"
